Ensure secondary text color persists in dark mode

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -1191,7 +1191,7 @@
             }
 
             .cs-topper {
-                color: var(--bodyTextColorWhite);
+                color: var(--secondary);
             }
 
             .cs-package {
@@ -1481,7 +1481,7 @@
         #reviews-287 {
             background-color: var(--darkBackground);
             .cs-topper {
-                color: var(--bodyTextColorWhite);
+                color: var(--secondary);
             }
 
             .cs-title,
