--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -292,6 +292,10 @@
             color: inherit;
         }
 
+        .cs-topper {
+            color: var(--secondary);
+        }
+
         p,
         li,
         h1,
